<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:background="@color/rosa"
    android:orientation="vertical"
    android:gravity="center|top"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp" xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.david.sqlandroid.Activities.ConsultListViewActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selectOption"
        android:textSize="20dp"/>

    <Spinner
        android:id="@+id/comboPersonas"
        android:paddingTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/spinnerID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ID"/>

        <TextView
            android:id="@+id/spinnerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"/>

        <TextView
            android:id="@+id/spinnerPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"/>
    </LinearLayout>
</LinearLayout>
